==> ConservationTech/FinBit_MSP432/FinBit_tagOS/MAX30105.cpp <==
#include <xdc/std.h>
#include <xdc/runtime/Diags.h>
#include <xdc/runtime/System.h>
#include <ti/sysbios/BIOS.h>
#include <ti/sysbios/knl/Semaphore.h>
#include <ti/sysbios/knl/Task.h>
#include <ti/sysbios/knl/Clock.h>
#include <ti/drivers/GPIO.h>
#include <ti/drivers/I2C.h>
#include "Board.h"
#include "system_clock.h"
#include "MAX30105.h"
#define DEBUGPRINT          false
#define TASKSTACKSIZE       640

bool MAX30105::begin(I2C_Handle i2c) {

//    I2C_Handle      i2c;
//    I2C_Params      i2cParams;
//    I2C_Params_init(&i2cParams);
//
////    if (i2cSpeed == 100000) {
////        //_i2cPort->setClock(i2cSpeed);
////        i2cParams.bitRate = I2C_100kHz;     // Set i2c bus speed to 100 kHz
////    } else if (i2cSpeed == 400000) {
////        //_i2cPort->setClock(i2cSpeed);
////        i2cParams.bitRate = I2C_400kHz;     // Set i2c bus speed to 400 kHz
////    } else {
////        // Catch any conditions where this gets specified poorly by the user's invocation, defaulting to 100 kHz
////        i2cParams.bitRate = I2C_100kHz;     // Default to 100kHz if argument is invalid bus speed
////    }
//
//    i2cParams.bitRate = I2C_400kHz;     // Set i2c bus speed to 400 kHz
//    i2c = I2C_open(Board_I2C_B0P16P17, &i2cParams);   // Board_I2C_MAX30105 -> MSP432's Pins 1.7 and 1.6 by default = UCB0SDA and UCB0SCL
//                                                      // ... may want to build in a spec for UCB1SDA and UCB1SCL to Pins 6.5 and 6.4
//                                                      // ... see MSP_EXP432P401R.h around Line 91 to do this enum

    if (i2c == NULL) {
        System_abort("Error Initializing I2C inside MAX30105 class. That's a problem!\n");
        System_flush();
        return false;
    }
    else {
        if (!readPartID(i2c) == MAX_30105_EXPECTEDPARTID) {
          // Error -- Part ID read from MAX30105 does not match expected part ID.
          // This may mean there is a physical connectivity problem (broken wire, unpowered, etc).
          return false;
    }

        if (DEBUGPRINT) {
            System_printf("Opening communication with MAX30105... time to gather some data!\n");
            System_flush();
        }

    return true;

    }

}

void MAX30105::softReset(I2C_Handle i2c) {
  bitMask(i2c, MAX30105_MODECONFIG, MAX30105_RESET_MASK, MAX30105_RESET);

  // Poll for bit to clear, reset is then complete; give timeout of ~100ms

  Task_sleep(100);
  uint8_t response = readRegister8(i2c, MAX30105_MODECONFIG);
  if ((response & MAX30105_RESET) == 0) {
      if (DEBUGPRINT) {
          System_printf("MAX30105 soft reset: completion successful!\n");
          System_flush();
      }
  }
  Task_sleep(10);     // delay(1); //Let's not over burden the I2C bus

}

uint16_t MAX30105::check(I2C_Handle i2c)
{
  //Read register FIDO_DATA in (3-byte * number of active LED) chunks
  //Until FIFO_RD_PTR = FIFO_WR_PTR

    // uint32_t tempLong[3];
    //    tempLong[0] = 0;
    //    tempLong[1] = 1;
    //    tempLong[2] = 2;

    // Try this using a uint32_t pointer to tempLong
    uint32_t* tempLong[3];

    uint8_t readPointer = getReadPointer(i2c);
    uint8_t writePointer = getWritePointer(i2c);

    uint8_t numberOfSamples = 0;

    if (DEBUGPRINT) {
        System_printf("MAX30105 readPointer = %d | MAX30105 writePointer = %d\n", readPointer, writePointer);
        System_flush();
    }

    //Do we have new data?
    if (readPointer != writePointer)
    {
    //Calculate the number of readings we need to get from sensor
    numberOfSamples = writePointer - readPointer;

    if (DEBUGPRINT) {
        System_printf("check() reports numberOfSamples in FIFO = %d\n", numberOfSamples);
        System_flush();
    }

    if (numberOfSamples < 0) numberOfSamples += 32; //Wrap condition

    //We now have the number of readings, now calc bytes to read
    //For this example we are just doing Red and IR (3 bytes each)

    uint16_t bytesLeftToRead = numberOfSamples * activeLEDs * 3;

    if (DEBUGPRINT) {
        System_printf("check() reports bytesLeftToRead = %d\n", bytesLeftToRead);
        System_flush();
    }

    //Wire.requestFrom() is limited to BUFFER_LENGTH which is 32 on the Uno
    //We may need to read as many as 288 bytes so we read in blocks no larger than 32
    //BUFFER_LENGTH should work with other platforms with larger requestFrom buffers
    //For now, use this placeholder value of 32. MSP432 may be able to handle much more than Arduino Uno...
    uint8_t BUFFER_LENGTH = 32;

    while (bytesLeftToRead > 0)
        {
          uint16_t toGet = bytesLeftToRead;
          if (toGet > BUFFER_LENGTH)
          {
            //If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
            //32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
            //32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

            toGet = BUFFER_LENGTH - (BUFFER_LENGTH % (activeLEDs * 3)); //Trim toGet to be a multiple of the samples we need to read
          }

          bytesLeftToRead -= toGet;

          //Request toGet number of bytes from sensor

          while (toGet > 0)
          {
            sense.head++;                   //Advance the head of the storage struct
            sense.head %= STORAGE_SIZE;     //Wrap condition

            // Need to burst read 3 bytes for each of the active LEDs
            // We call 'readFIFODATA(i2c, MAX30105_FIFODATA, activeLEDs * 3);' to accomplish this.
            // This function pushes each 18-bit red, nir, and/or green value from MAX3010's FIFODATA circular buffer
            // into the appropriate sense.LEDCOLOR[sense.head] (i.e.: the top of our sense circular buffer)
            readFIFODATA(i2c, MAX30105_FIFODATA, activeLEDs * 3);       // Return the 18-bit RED value from MAX3010's FIFODATA circular buffer to sense.red in readFIFODATA

//            if (activeLEDs > 1)
//            {
//                readFIFODATA(i2c, MAX30105_FIFODATA, activeLEDs * 3);       // Return the 18-bit RED value from MAX3010's FIFODATA circular buffer to sense.red in readFIFODATA
//
//            }
//
//            if (activeLEDs > 2)
//            {
//                // Need to parse tempLong[1:3] and stuff into uint32_t sense.red, sense.nir, and sense.green
//                readFIFODATA(i2c, MAX30105_FIFODATA, activeLEDs * 3);       // Return the 18-bit RED value from MAX3010's FIFODATA circular buffer to sense.red in readFIFODATA
//            }

            toGet -= activeLEDs * 3;
          }

        } //End while (bytesLeftToRead > 0)

    } //End readPtr != writePtr

    return (numberOfSamples); //Let the world know how much new data we found
}

uint8_t MAX30105::readRegister8(I2C_Handle i2c, uint8_t regAddr) {

    uint8_t             txBuffer[2], rxBuffer[1];

//    I2C_Handle      i2c;
//    I2C_Params      i2cParams;
//    I2C_Params_init(&i2cParams);                         // Create I2C for usage

    I2C_Transaction     i2cTransaction;

    i2cTransaction.slaveAddress = Board_MAX30105_ADDR;

    // Write to an 8-bit status register
    i2cTransaction.writeBuf = txBuffer;
    i2cTransaction.readBuf = rxBuffer;
    i2cTransaction.writeCount = 1;
    i2cTransaction.readCount = 1;

    txBuffer[0] = regAddr;

    // if (!I2C_transfer(handle, &i2cTransaction)) {      this was how this was prior to making MAX30105 class. See if next line works...
    if (!I2C_transfer(i2c, &i2cTransaction)) {
        GPIO_write(Board_LED1, Board_LED_ON);
        System_abort("Bad I2C transfer!");
    } // else {
        return (rxBuffer[0]);
    // }

}

void MAX30105::writeRegister8(I2C_Handle i2c, uint8_t regAddr, uint8_t value)
{
    uint8_t             txBuffer[2];
    I2C_Transaction     i2cTransaction;

    i2cTransaction.slaveAddress = Board_MAX30105_ADDR;

    // Write to an 8-bit status register
    i2cTransaction.writeBuf = txBuffer;
    i2cTransaction.writeCount = 2;
    i2cTransaction.readCount = 0;

    txBuffer[0] = regAddr; //  & 0xFF; //LB Addr
    txBuffer[1] = value;   //   & 0xFF;

    if (!I2C_transfer(i2c, &i2cTransaction)) {
        GPIO_write(Board_LED1, Board_LED_ON);
        System_abort("MAX30105::writeRegister8 Error - Bad I2C transfer!");
    }
}
