==> bluetiger9/nRF53-Wearable/Software/nrf5340_cpuapp/src/MAX30105.cpp <==
#include "MAX30105.h"
#include <string.h> // memcpy

bool MAX30105::begin(const device *wirePort, uint8_t i2c_addr) {

  _i2cPort = wirePort; //Grab which port the user wants us to use

  //_i2cPort->begin();
  //_i2cPort->setClock(i2cSpeed);

  _i2caddr = i2c_addr;

  // Step 1: Initial Communication and Verification
  // Check that a MAX30105 is connected
  if (readPartID() != MAX_30105_EXPECTEDPARTID) {
    printk("MAX3010x init failed!\n");
    // Error -- Part ID read from MAX30105 does not match expected part ID.
    // This may mean there is a physical connectivity problem (broken wire, unpowered, etc).
    return false;
  }

  printk("MAX3010x init OK!\n");

  // Populate revision ID
  readRevisionID();
  
  return true;
}

void MAX30105::softReset(void) {
  bitMask(MAX30105_MODECONFIG, MAX30105_RESET_MASK, MAX30105_RESET);

  // Poll for bit to clear, reset is then complete
  // Timeout after 100ms
  unsigned long startTime = millis();
  while (millis() - startTime < 100)
  {
    uint8_t response = readRegister8(_i2caddr, MAX30105_MODECONFIG);
    if ((response & MAX30105_RESET) == 0) break; //We're done!
    delay(1); //Let's not over burden the I2C bus
  }
}

uint16_t MAX30105::check(void)
{
  //Read register FIDO_DATA in (3-byte * number of active LED) chunks
  //Until FIFO_RD_PTR = FIFO_WR_PTR

  uint8_t readPointer = getReadPointer();
  uint8_t writePointer = getWritePointer();

  int numberOfSamples = 0;

  //Do we have new data?
  if (readPointer != writePointer)
  {
    //Calculate the number of readings we need to get from sensor
    numberOfSamples = writePointer - readPointer;
    if (numberOfSamples < 0) numberOfSamples += 32; //Wrap condition

    //We now have the number of readings, now calc bytes to read
    //For this example we are just doing Red and IR (3 bytes each)
    int bytesLeftToRead = numberOfSamples * activeLEDs * 3;

    //Get ready to read a burst of data from the FIFO register
    this->_i2c_write(MAX30105_FIFODATA);
    //_i2cPort->beginTransmission(MAX30105_ADDRESS);
    //_i2cPort->write(MAX30105_FIFODATA);
    //_i2cPort->endTransmission();

    //We may need to read as many as 288 bytes so we read in blocks no larger than I2C_BUFFER_LENGTH
    //I2C_BUFFER_LENGTH changes based on the platform. 64 bytes for SAMD21, 32 bytes for Uno.
    //Wire.requestFrom() is limited to BUFFER_LENGTH which is 32 on the Uno
    while (bytesLeftToRead > 0)
    {
      int toGet = bytesLeftToRead;
      if (toGet > I2C_BUFFER_LENGTH)
      {
        //If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
        //32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
        //32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

        toGet = I2C_BUFFER_LENGTH - (I2C_BUFFER_LENGTH % (activeLEDs * 3)); //Trim toGet to be a multiple of the samples we need to read
      }

      bytesLeftToRead -= toGet;

      uint8_t buff[I2C_BUFFER_LENGTH];
      uint8_t bufPos = 0;

      //Request toGet number of bytes from sensor
      i2c_read(_i2cPort, buff, toGet, MAX30105_ADDRESS);
      //_i2cPort->requestFrom(MAX30105_ADDRESS, toGet);
      
      while (toGet > 0)
      {
        sense.head++; //Advance the head of the storage struct
        sense.head %= STORAGE_SIZE; //Wrap condition

        uint8_t temp[sizeof(uint32_t)]; //Array of 4 bytes that we will convert into long
        uint32_t tempLong;

        //Burst read three bytes - RED
        temp[3] = 0;
        temp[2] = buff[bufPos]; bufPos++; //_i2cPort->read();
        temp[1] = buff[bufPos]; bufPos++; //_i2cPort->read();
        temp[0] = buff[bufPos]; bufPos++; //_i2cPort->read();

        //Convert array to long
        memcpy(&tempLong, temp, sizeof(tempLong));
		
		tempLong &= 0x3FFFF; //Zero out all but 18 bits

        sense.red[sense.head] = tempLong; //Store this reading into the sense array

        if (activeLEDs > 1)
        {
          //Burst read three more bytes - IR
          temp[3] = 0;
          temp[2] = buff[bufPos]; bufPos++; //_i2cPort->read();
          temp[1] = buff[bufPos]; bufPos++; //_i2cPort->read();
          temp[0] = buff[bufPos]; bufPos++; //_i2cPort->read();

          //Convert array to long
          memcpy(&tempLong, temp, sizeof(tempLong));

		  tempLong &= 0x3FFFF; //Zero out all but 18 bits
          
		  sense.IR[sense.head] = tempLong;
        }

        if (activeLEDs > 2)
        {
          //Burst read three more bytes - Green
          temp[3] = 0;
          temp[2] = buff[bufPos]; bufPos++; //_i2cPort->read();
          temp[1] = buff[bufPos]; bufPos++; //_i2cPort->read();
          temp[0] = buff[bufPos]; bufPos++; //_i2cPort->read();

          //Convert array to long
          memcpy(&tempLong, temp, sizeof(tempLong));

		  tempLong &= 0x3FFFF; //Zero out all but 18 bits

          sense.green[sense.head] = tempLong;
        }

        toGet -= activeLEDs * 3;
      }

    } //End while (bytesLeftToRead > 0)

  } //End readPtr != writePtr

  return (numberOfSamples); //Let the world know how much new data we found
}

uint8_t MAX30105::readRegister8(uint8_t address, uint8_t reg) {
  //static inline int i2c_reg_read_byte(const struct device *dev, uint16_t dev_addr, uint8_t reg_addr, uint8_t *value)
  uint8_t res, err;
  err = i2c_reg_read_byte(_i2cPort, MAX30105_ADDRESS, reg, &res);
  if (err > 0) {
    return (0); //Fail
  }
  return res;

  //_i2cPort->beginTransmission(address);
  //_i2cPort->write(reg);
  //_i2cPort->endTransmission(false);

  //_i2cPort->requestFrom((uint8_t)address, (uint8_t)1); // Request 1 byte
  //if (_i2cPort->available())
  //{
  //  return(_i2cPort->read());
  //}
  //
  //return (0); //Fail

}

void MAX30105::writeRegister8(uint8_t address, uint8_t reg, uint8_t value) {
  uint8_t err;
  err = i2c_reg_write_byte(_i2cPort, MAX30105_ADDRESS, reg, value);
  if (err > 0) {
    // TODO: handle error
  }
  //_i2cPort->beginTransmission(address);
  //_i2cPort->write(reg);
  //_i2cPort->write(value);
  //_i2cPort->endTransmission();
}
